--- a/RejestrOsobProjekt/RejestrOsobProjekt.csproj
+++ b/RejestrOsobProjekt/RejestrOsobProjekt.csproj
@@ -158,12 +158,17 @@
     <Compile Include="Migrations\202105051856168_addingUserEntity.designer.cs">
       <DependentUpon>202105051856168_addingUserEntity.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202105070827458_edituserrole.cs" />
+    <Compile Include="Migrations\202105070827458_edituserrole.Designer.cs">
+      <DependentUpon>202105070827458_edituserrole.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Human.cs" />
     <Compile Include="Models\Role.cs" />
     <Compile Include="Models\StoreContext.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModel\LoginFormViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap-theme.css" />
@@ -204,6 +209,10 @@
     <Content Include="Views\Human\Create.cshtml" />
     <Content Include="Views\Human\Index.cshtml" />
     <Content Include="Views\Account\Register.cshtml" />
+    <Content Include="Views\Account\Login.cshtml" />
+    <Content Include="Views\Human\Details.cshtml" />
+    <Content Include="Views\Home\Missing.cshtml" />
+    <Content Include="Views\Home\Details.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -239,6 +248,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202105051856168_addingUserEntity.resx">
       <DependentUpon>202105051856168_addingUserEntity.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202105070827458_edituserrole.resx">
+      <DependentUpon>202105070827458_edituserrole.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
