--- a/RejestrOsobProjekt/RejestrOsobProjekt.csproj
+++ b/RejestrOsobProjekt/RejestrOsobProjekt.csproj
@@ -162,12 +162,22 @@
     <Compile Include="Migrations\202105070827458_edituserrole.Designer.cs">
       <DependentUpon>202105070827458_edituserrole.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202105070917336_imageUser.cs" />
+    <Compile Include="Migrations\202105070917336_imageUser.Designer.cs">
+      <DependentUpon>202105070917336_imageUser.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202105071100151_addgender.cs" />
+    <Compile Include="Migrations\202105071100151_addgender.Designer.cs">
+      <DependentUpon>202105071100151_addgender.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
+    <Compile Include="Models\Gender.cs" />
     <Compile Include="Models\Human.cs" />
     <Compile Include="Models\Role.cs" />
     <Compile Include="Models\StoreContext.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModel\HumanFormViewModel.cs" />
     <Compile Include="ViewModel\LoginFormViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -216,6 +226,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Image\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
@@ -251,6 +262,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202105070827458_edituserrole.resx">
       <DependentUpon>202105070827458_edituserrole.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202105070917336_imageUser.resx">
+      <DependentUpon>202105070917336_imageUser.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202105071100151_addgender.resx">
+      <DependentUpon>202105071100151_addgender.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
