--- a/RejestrOsobProjekt/RejestrOsobProjekt.csproj
+++ b/RejestrOsobProjekt/RejestrOsobProjekt.csproj
@@ -129,6 +129,7 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\AdminController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\HumanController.cs" />
     <Compile Include="Global.asax.cs">
@@ -170,6 +171,14 @@
     <Compile Include="Migrations\202105071100151_addgender.Designer.cs">
       <DependentUpon>202105071100151_addgender.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202105140708450_new prop.cs" />
+    <Compile Include="Migrations\202105140708450_new prop.Designer.cs">
+      <DependentUpon>202105140708450_new prop.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202105140715156_changed prop.cs" />
+    <Compile Include="Migrations\202105140715156_changed prop.Designer.cs">
+      <DependentUpon>202105140715156_changed prop.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Gender.cs" />
     <Compile Include="Models\Human.cs" />
@@ -179,6 +188,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModel\HumanFormViewModel.cs" />
     <Compile Include="ViewModel\LoginFormViewModel.cs" />
+    <Compile Include="ViewModel\UserFormViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap-theme.css" />
@@ -223,6 +233,11 @@
     <Content Include="Views\Human\Details.cshtml" />
     <Content Include="Views\Home\Missing.cshtml" />
     <Content Include="Views\Home\Details.cshtml" />
+    <Content Include="Views\Admin\Index.cshtml" />
+    <Content Include="Views\Admin\Delete.cshtml" />
+    <Content Include="Views\Human\Edit.cshtml" />
+    <Content Include="Views\Admin\Edit.cshtml" />
+    <Content Include="Views\Admin\Create.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -268,6 +283,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202105071100151_addgender.resx">
       <DependentUpon>202105071100151_addgender.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202105140708450_new prop.resx">
+      <DependentUpon>202105140708450_new prop.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202105140715156_changed prop.resx">
+      <DependentUpon>202105140715156_changed prop.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
